# app

./: README.md  docker-compose.yml
server/: Cargo.toml  Dockerfile
server/migrations/: 20240126173822_db.down.sql  20240126173822_db.up.sql
server/src/: controllers.rs  main.rs  middleware.rs  models.rs
server/src/controllers/: add_answer_controller.rs  add_friend_controller.rs  delete_friend_controller.rs  email_settings_controller.rs  find_friend_controller.rs  firebase_controller.rs  friends_list_controller.rs  get_answer_controller.rs  get_user_information_controller.rs  password_settings_controller.rs  question_content_controller.rs  question_count_controller.rs  signup_controller.rs
server/src/controllers/add_answer_controller/: answer_create_controller.rs  types.rs
server/src/controllers/add_friend_controller/: friend_create_controller.rs  types.rs
server/src/controllers/delete_friend_controller/: friend_delete_controller.rs  types.rs
server/src/controllers/email_settings_controller/: email_update_controller.rs  types.rs
server/src/controllers/find_friend_controller/: friend_name_read_controller.rs  (+1 more)
server/src/database/: db.rs
server/src/middleware/: tracing.rs  validation.rs
server/src/models/: add_answer_model.rs  add_friend_model.rs  delete_friend_model.rs  email_settings_model.rs  find_friend_model.rs  firebase_model.rs  friends_list_model.rs  get_answer_model.rs  get_user_information_model.rs  password_settings_model.rs  question_content_model.rs  question_count_model.rs
server/src/routes/: route.rs
server/tests/: example_test.rs
(+144 files in other folders)
