[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.16", features = ["headers", "http2", "ws", "tower-log", "macros"]}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.1.3"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "any", "postgres", "offline"] }
tower-http = { version = "0.3.4", features = ["cors", "fs", "trace"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
tower = "0.4.13"
chrono = "0.4.23"
thiserror = "1.0.38"
validator = { version = "0.16.0", features = ["derive"] }
http-body = "0.4.3"
# uuid = { version = "0.8.1", features = ["serde", "v4"] }
async-trait = "0.1.67"
harsh = "0.2.2"
mime = "0.3.16"
hyper = { version = "0.14.16", features = ["full"] }

[profile.release]
strip = true

# [[bin]]
# name = "main"
# path = "./workspace/server/src/main.rs"
